// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx component renders with all required fields 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Ozon
    </span>
    <span
      id="date"
    >
      mocked date
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      3
    </div>
    <div
      className="Order-item"
      key="1"
    >
      4
    </div>
    <div
      className="Order-item"
      key="2"
    >
      5
    </div>
  </div>
</div>
`;

exports[`Order.tsx order does not have items 1`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      Ozon
    </span>
    <span
      id="date"
    >
      mocked date
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;
